[tool.poetry]
name = "attention-memory"
version = "0.0.1"
description = ""
authors = ["Euijin Jeong <jin.Prelude@gmail.com>"]
license="MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
tensorboard = "^2.11.2"
wandb = "^0.13.9"
torch = ">=1.13.1"
gymnasium = "^0.27.1"
gym-balletenv = {git = "https://github.com/jinPrelude/gym-balletenv.git", rev = "v0.0.2"}

# for pytest
pytest = "^7.1.3"

[tool.poetry.group.atari]
optional = true
[tool.poetry.group.atari.dependencies]
envpool = "^0.8.1"
opencv-python = "^4.7.0.68"
gymnasium = {extras = ["accept-rom-license"], version = "^0.27.1"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
