[tool.poetry]
name = "hcam-torch"
version = "0.0.1"
description = "Implementation of the paper Towards mental time travel: a hierarchical memory for reinforcement learning agents using CleanRL."
authors = ["Euijin Jeong <jin.Prelude@gmail.com>"]
license="MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorboard = "^2.15.1"
wandb = "^0.15.12"
torch = "^2.2.0"
gymnasium = "^0.27.1"
gym-balletenv = {git = "https://github.com/jinPrelude/gym-balletenv.git"}

# for pytest
pytest = "^7.4.4"

[tool.poetry.group.atari]
optional = true
[tool.poetry.group.atari.dependencies]
envpool = "^0.8.1"
opencv-python = "^4.7.0.68"
gymnasium = {extras = ["accept-rom-license"], version = "^0.27.1"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
